Adjust spacing for comment text to avoid overlap with profile pic

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -530,6 +530,7 @@ ol#rank-nav li {
 .x-info {
     font-size:0.7rem;
     margin-bottom:3px;
+    padding-right:15px;
 }
 
 .comment-btn {
